--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POKEMON TYPES</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
+    <header><h1>POKEMON</h1></header>
     <div class="container">
         <h1>TYPES</h1>
         <select id="options">
-            <option  value="FIRE">FIRE</option>
+            <option  value="FIRE">FIRE Scorched Slab</option>
             <option  value="WATER">WATER Seafoam Islands</option>
             <option  value="GRASS">GRASS Eterna Forest</option>
             <option value="ELECTRIC">ELECTRIC Power Plant</option>
             <option value="ICE">ICE Seafoam Islands</option>
-            <option value="FIGHTING">FIGHTING</option>
+            <option value="FIGHTING">FIGHTING Victory Road</option>
             <option value="POISON">POISON Eterna Forest</option>
             <option value="GROUND">GROUND</option>
             <option value="FLYING">FLYING Sky Pillar</option>
@@ -25,7 +27,7 @@
             <option value="GHOST">GHOST</option>
             <option value="DRAGON">DRAGON</option>
             <option value="DARK">DARK</option>
-            <option value="STEEL">STEEL</option>
+            <option value="STEEL">STEEL Valley Windworks</option>
             <option value="FAIRY">FAIRY</option>
             <option value="NORMAL">NORMAL Sky Pillar</option>
         </select>
