--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POKEMON TYPES</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="test.css">
     
 </head>
 <body>
@@ -45,14 +45,14 @@
  
     <div class="typescontainer">
         <h2>Matchup</h2>
-        <img id="normalType" src="https://raw.githubusercontent.com/arrowgtr/pokemontypes/main/types/normal.png" alt="Normal Type" onclick="showMatchupPopup('normal')" />
-        <img id="fireType" src="https://raw.githubusercontent.com/arrowgtr/pokemontypes/main/types/fire.png" alt="Fire Type" onclick="showMatchupPopup('fire')" />
-        <img id="waterType" src="https://raw.githubusercontent.com/arrowgtr/pokemontypes/main/types/water.png" alt="Water Type" onclick="showMatchupPopup('water')" />
+        <img id="normalType" src="https://raw.githubusercontent.com/arrowgtr/pokemontypes/main/types/normal.png" alt="Normal Type" title="Normal" onclick="showMatchupPopup('normal')" />
+        <img id="fireType" src="https://raw.githubusercontent.com/arrowgtr/pokemontypes/main/types/fire.png" alt="Fire Type" title="Fire" onclick="showMatchupPopup('fire')" />
+        <img id="waterType" src="https://raw.githubusercontent.com/arrowgtr/pokemontypes/main/types/water.png" alt="Water Type" title="Water" onclick="showMatchupPopup('water')" />
         <img id="electricType" src="https://raw.githubusercontent.com/arrowgtr/pokemontypes/main/types/electric.png" alt="Electric Type" onclick="showMatchupPopup('electric')" />
         <img id="grassType" src="https://raw.githubusercontent.com/arrowgtr/pokemontypes/main/types/grass.png" alt="Grass Type" onclick="showMatchupPopup('grass')" />
         <img id="iceType" src="https://raw.githubusercontent.com/arrowgtr/pokemontypes/main/types/ice.png" alt="Ice Type" onclick="showMatchupPopup('ice')" />
         <img id="fightingType" src="https://raw.githubusercontent.com/arrowgtr/pokemontypes/main/types/fighting.png" alt="Fighting Type" onclick="showMatchupPopup('fighting')" />
-        <img id="poisonType" src="https://raw.githubusercontent.com/arrowgtr/pokemontypes/main/types/poison.png" alt="Poison Type" onclick="showMatchupPopup('poison')" />
+        <img id="poisonType" src="https://raw.githubusercontent.com/arrowgtr/pokemontypes/main/types/poison.png" alt="Poison Type"  onclick="showMatchupPopup('poison')" />
         <img id="groundType" src="https://raw.githubusercontent.com/arrowgtr/pokemontypes/main/types/ground.png" alt="Ground Type" onclick="showMatchupPopup('ground')" />
         <img id="flyingType" src="https://raw.githubusercontent.com/arrowgtr/pokemontypes/main/types/flying.png" alt="Flying Type" onclick="showMatchupPopup('flying')" />
         <img id="psychicType" src="https://raw.githubusercontent.com/arrowgtr/pokemontypes/main/types/psychic.png" alt="Psychic Type" onclick="showMatchupPopup('psychic')" />
